--- a/Blogger/src/Presentation/Blogger-SPA/package.json
+++ b/Blogger/src/Presentation/Blogger-SPA/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "^8.1.0",
     "@angular/platform-browser-dynamic": "^8.1.0",
     "@angular/router": "^8.1.0",
+    "@kolkov/angular-editor": "^1.0.0-beta.4",
     "@ng-bootstrap/ng-bootstrap": "^5.1.1",
     "bootstrap": "^4.3.1",
     "core-js": "^3.1.4",
