Update create modal

--- a/Blogger/src/Presentation/Blogger.Presentation.WebAPI/appsettings.json
+++ b/Blogger/src/Presentation/Blogger.Presentation.WebAPI/appsettings.json
@@ -1,5 +1,6 @@
 ﻿{
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=NGUYENHUYVU\\SQLEXPRESS;User Id=Baka;Password=Mylovell1;Database=BloggerDB;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
+	"ConnectionStrings": {
+		//"DefaultConnection": "Server=NGUYENHUYVU\\SQLEXPRESS;User Id=Baka;Password=Mylovell1;Database=BloggerDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+		"DefaultConnection": "Server=(localdb)\\ProjectsV13;User Id=Baka;Password=Mylovell1;Database=BloggerDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+	}
 }
