--- a/Blogger/src/Presentation/Blogger-SPA/package.json
+++ b/Blogger/src/Presentation/Blogger-SPA/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.1.0",
+    "@angular/animations": "^8.2.13",
     "@angular/common": "^8.1.0",
     "@angular/compiler": "^8.1.0",
     "@angular/core": "^8.1.0",
@@ -26,6 +26,7 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
     "ngx-bootstrap": "^5.1.1",
+    "ngx-toastr": "^11.2.0",
     "rxjs": "^6.0.0",
     "tether": "^1.4.6",
     "tslib": "^1.9.0",
