--- a/Blogger/src/Presentation/Blogger-SPA/package.json
+++ b/Blogger/src/Presentation/Blogger-SPA/package.json
@@ -26,6 +26,7 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
     "ngx-bootstrap": "^5.1.1",
+    "ngx-chips": "^2.1.0",
     "ngx-toastr": "^11.2.0",
     "rxjs": "^6.0.0",
     "tether": "^1.4.6",
