--- a/Blogger/src/Presentation/Blogger.Presentation.WebAPI/appsettings.json
+++ b/Blogger/src/Presentation/Blogger.Presentation.WebAPI/appsettings.json
@@ -1,6 +1,7 @@
 ﻿{
-	"ConnectionStrings": {
-		//"DefaultConnection": "Server=NGUYENHUYVU\\SQLEXPRESS;User Id=Baka;Password=Mylovell1;Database=BloggerDB;Trusted_Connection=True;MultipleActiveResultSets=true"
-		"DefaultConnection": "Server=(localdb)\\ProjectsV13;User Id=Baka;Password=Mylovell1;Database=BloggerDB;Trusted_Connection=True;MultipleActiveResultSets=true"
-	}
+  "ConnectionStrings": {
+    //"DefaultConnection": "Server=NGUYENHUYVU\\SQLEXPRESS;User Id=Baka;Password=Mylovell1;Database=BloggerDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"DefaultConnection": "Server=(localdb)\\ProjectsV13;User Id=Baka;Password=Mylovell1;Database=BloggerDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=tcp:autunna811.database.windows.net,1433;Initial Catalog=Blogger;Persist Security Info=False;User ID=blogger;Password=Mylovell1;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  }
 }
