--- a/Blogger/src/Infrastructure/Blogger.Infrrastructure.Persistence/Blogger.Infrastructure.Persistence.csproj
+++ b/Blogger/src/Infrastructure/Blogger.Infrrastructure.Persistence/Blogger.Infrastructure.Persistence.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
@@ -13,4 +13,7 @@
     <ProjectReference Include="..\..\ApplicationCore\Blogger.Core.Domain\Blogger.Core.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="2.0.3" />
+  </ItemGroup>
 </Project>
